framework for gui.  it shows as a weed file now, but its pretty ugly.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1111,13 +1111,17 @@ ERROR_SEARCH_TOO_LARGE=Your search is too long. Please make your search smaller 
 ERROR_XML_SEARCH_TOO_LARGE=Your search is too specific. Please make your search smaller and try again.
 
 ################################################################################
+# Messages for Licensing
+################################################################################
+LICENSE_VIEW_LICENSE=View License
+LICENSE_VERIFY=Verify
+
+################################################################################
 # Messages for Creative Commons Licensing
 ################################################################################
-LICENSE_CC_VIEW_LICENSE=View License
-LICENSE_CC_TITLE=License Details
+LICENSE_CC_TITLE=Creative Commons Details
 LICENSE_CC_LOCATING=LimeWire is currently locating the details of this license.
 LICENSE_CC_UNVERIFIED=LimeWire has not yet verified this license. Click 'verify' to locate the details of this Creative Commons license.
-LICENSE_CC_VERIFY=Verify
 LICENSE_CC_INVALID=LimeWire was unable to locate the details of this license.
 LICENSE_CC_RETRY=You can try validating this license again by clicking 'Verify'.
 LICENSE_CC_DETAILS=License Details:
@@ -1125,6 +1129,26 @@ LICENSE_CC_CLAIMED_DEED=View Claimed License Deed
 LICENSE_CC_DEED=View License Deed
 LICENSE_CC_VERIFICATION=View Verification Page
 LICENSE_CC=Creative Commons
+
+################################################################################
+# Messages for Weed Licensing
+################################################################################
+LICENSE_WEED_TITLE=Weedshare Details
+LICENSE_WEED_LOCATING=LimeWire is contacting www.weedshare.com for the details of this file.
+LICENSE_WEED_UNVERIFIED=LimeWire has not yet verified this license.  Click 'verify' to locate the details of this file.
+LICENSE_WEED_INVALID=LimeWire was unable to locate the details of this Weed file.
+LICENSE_WEED_RETRY=You can try looking up the details again by clicking 'Verify'.
+LICENSE_WEED_DETAILS=License Details:
+LICENSE_WEED_CLAIMED_DEED=View Weedshare Usage Rights
+LICENSE_WEED_DEED=View Usage Rights
+LICENSE_WEED_VERIFICATION=View Verification Page
+LICENSE_WEED=Weedshare
+
+################################################################################
+# Messages for Unknown licenses
+################################################################################
+LICENSE_UNKNOWN_TITLE=License Details
+LICENSE_UNKNOWN_INVALID=LimeWire was unable to determine the license for this file.
 
 ################################################################################
 # Keys for the titles of the options panes. The corresponding values represent
