better weed dialog.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1121,7 +1121,7 @@ LICENSE_VERIFY=Verify
 ################################################################################
 LICENSE_CC_TITLE=Creative Commons Details
 LICENSE_CC_LOCATING=LimeWire is currently locating the details of this license.
-LICENSE_CC_UNVERIFIED=LimeWire has not yet verified this license. Click 'verify' to locate the details of this Creative Commons license.
+LICENSE_CC_UNVERIFIED=LimeWire has not yet verified this license.\nClick 'verify' to locate the details of this Creative Commons license.
 LICENSE_CC_INVALID=LimeWire was unable to locate the details of this license.
 LICENSE_CC_RETRY=You can try validating this license again by clicking 'Verify'.
 LICENSE_CC_DETAILS=License Details:
@@ -1135,7 +1135,7 @@ LICENSE_CC=Creative Commons
 ################################################################################
 LICENSE_WEED_TITLE=Weedshare Details
 LICENSE_WEED_LOCATING=LimeWire is contacting www.weedshare.com for the details of this file.
-LICENSE_WEED_UNVERIFIED=LimeWire has not yet verified this license.  Click 'verify' to locate the details of this file.
+LICENSE_WEED_UNVERIFIED=LimeWire has not yet verified this license.\nClick 'verify' to locate the details of this file.
 LICENSE_WEED_INVALID=LimeWire was unable to locate the details of this Weed file.
 LICENSE_WEED_RETRY=You can try looking up the details again by clicking 'Verify'.
 LICENSE_WEED_DETAILS=License Details:
