--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -334,6 +334,7 @@ SEARCH_NOT_CONNECTED=You are not connected to the network. To connect, select "C
 SEARCH_STILL_CONNECTING=LimeWire is currently connecting to the network. Your search may not return many results until you are fully connected to the network.
 SEARCH_DOWNLOAD_BUTTON_LABEL=Download
 SEARCH_DOWNLOAD_BUTTON_TIP=Download All Selected Files
+SEARCH_DOWNLOAD_AS_LABEL=Download As...
 SEARCH_WISHLIST_BUTTON_LABEL=Add To Wishlist
 SEARCH_WISHLIST_BUTTON_TIP=Spawn a "LimeWire Robot" to Look for the Content
 SEARCH_BROWSE_HOST_BUTTON_LABEL=Browse Host
