clear downloads when finished

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -446,6 +446,7 @@ DOWNLOAD_KILL_BUTTON_LABEL=Cancel
 DOWNLOAD_KILL_BUTTON_TIP=Cancel Selected Downloads
 DOWNLOAD_KILL_BUTTON_COMPLETED_LABEL=Clear
 DOWNLOAD_KILL_BUTTON_COMPLETED_TIP=Clear Selected Downloads
+DOWNLOAD_POPUP_MENU_KILL_COMPLETED_LABEL=Clear Downloads
 DOWNLOAD_RESUME_BUTTON_LABEL=Resume
 DOWNLOAD_RESUME_BUTTON_TIP=Reattempt Selected Downloads
 DOWNLOAD_SOURCES_BUTTON_LABEL=Find Sources
