(1) Fixed Library table lack of update when removing specially shared file.  (2) Selected 'Saved Files' in LibraryTree when 'Individually Shared Files' was selected and then removed.  (3) Clarified text of new sharing option.  (4) Put VCC.handleFileManagerEvent calls on the AWT thread.  (5) Added line numbers to log4j output.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1254,9 +1254,9 @@ OPTIONS_SHARED_DIRS_LABEL=You can choose the folders for sharing files. Files in
 OPTIONS_SHARED_DIRS_BOX_LABEL=Folders:
 OPTIONS_SHARED_DIRS_BUTTON_LABEL=Add Folder...
 OPTIONS_SHARED_DIRS_BUTTON_TIP=Add a Folder to Share
-OPTIONS_SHARED_SPECIALLY_SHARE_BOX_LABEL=Share All Downloaded Files
-OPTIONS_SHARED_SHARE_SPECIALLY_TITLE=Individually Shared Files
-OPTIONS_SHARED_SHARE_SPECIALLY_LABEL=Also share files that are not downloaded to shared folders.
+OPTIONS_SHARED_SPECIALLY_SHARE_BOX_LABEL=Share Finished Downloads:
+OPTIONS_SHARED_SHARE_SPECIALLY_TITLE=Download Sharing
+OPTIONS_SHARED_SHARE_SPECIALLY_LABEL=You can share files that you download to folders that are not shared.
 
 ################################################################################
 # Key/value pairs for the shared extension options window item
