cleaned up xml -> resource string code.

--- a/lib/messagebundles/xml/display/property_ja.properties
+++ b/lib/messagebundles/xml/display/property_ja.properties
@@ -48,4 +48,4 @@ properties__property__city__               = \u753a
 properties__property__zip__                = \u90f5\u4fbf\u756a\u53f7
 properties__property__state__              = \u5dde
 properties__property__country__            = \u56fd
-properties__property__action__ = \u30a2\u30af\u30b7\u30e7\u30f3^10
+properties__property__action__ = \u30a2\u30af\u30b7\u30e7\u30f3
