--- a/lib/messagebundles/xml/display/radioStation_fr.properties
+++ b/lib/messagebundles/xml/display/radioStation_fr.properties
@@ -16,4 +16,4 @@ radioStations__radioStation__description__ = Description
 radioStations__radioStation__comments__    = Commentaires
 radioStations__radioStation__image__       = Image
 radioStations__radioStation__link__        = Lien
-radioStations__radioStation__ = Action^10
+radioStations__radioStation__ = Action
