--- a/lib/messagebundles/xml/display/radioStation_ja.properties
+++ b/lib/messagebundles/xml/display/radioStation_ja.properties
@@ -16,4 +16,4 @@ radioStations__radioStation__description__ = \u8a18\u8ff0
 radioStations__radioStation__comments__    = \u30b3\u30e1\u30f3\u30c8
 radioStations__radioStation__image__       = \u30a4\u30e1\u30fc\u30b8
 radioStations__radioStation__link__        = \u30ea\u30f3\u30af
-radioStations__radioStation__action__ = \u30a2\u30af\u30b7\u30e7\u30f3^10
+radioStations__radioStation__action__ = \u30a2\u30af\u30b7\u30e7\u30f3
