--- a/lib/messagebundles/xml/display/radioStation_nl.properties
+++ b/lib/messagebundles/xml/display/radioStation_nl.properties
@@ -16,4 +16,4 @@ radioStations__radioStation__description__ = Beschrijving
 radioStations__radioStation__comments__    = Commentaar
 radioStations__radioStation__image__       = Foto
 radioStations__radioStation__link__        = Link
-radioStations__radioStation__ = Actie^10
+radioStations__radioStation__ = Actie
