--- a/lib/messagebundles/xml/display/event_fr.properties
+++ b/lib/messagebundles/xml/display/event_fr.properties
@@ -1,10 +1,10 @@
 events__event               = Évènement
-events__event__performer__  = Équipe ou artistes^60
-events__event__event_name__ = Nom de l'évènement^60
-events__event__venue__      = Assistance attendue^40
-events__event__city__       = Ville^40
+events__event__performer__  = Équipe ou artistes
+events__event__event_name__ = Nom de l'évènement
+events__event__venue__      = Assistance attendue
+events__event__city__       = Ville
 events__event__state__      = État ou province
-events__event__country__    = Pays^40
+events__event__country__    = Pays
 events__event__year__       = Année
 events__event__month__      = Mois
 events__event__day__        = Jour
@@ -12,4 +12,4 @@ events__event__type__       = Type
 events__event__price__      = Prix
 events__event__link__       = Lien
 events__event__comments__   = Commentaires
-events__event__action__ = Action^10
+events__event__action__ = Action
