--- a/lib/messagebundles/xml/display/person_fr.properties
+++ b/lib/messagebundles/xml/display/person_fr.properties
@@ -1,20 +1,20 @@
 persons__person                   = Personne
-persons__person__subname__        = Prénom^60
-persons__person__name__           = Nom (patronyme)^60
-persons__person__email__          = Adresse courriel^60
-persons__person__language__       = Langue^10
-persons__person__title__          = Titre^10
-persons__person__country__        = Pays^40
-persons__person__state__          = État ou province^10
-persons__person__city__           = Ville^40
-persons__person__school__         = École^40
-persons__person__job__            = Profession^40
-persons__person__company__        = Société ou organisation^40
-persons__person__yearBirthday__   = Année anniversaire^10
-persons__person__mounthBirthday__ = Mois anniversaire^10
-persons__person__dayBirthday__    = Jour anniversaire^10
+persons__person__subname__        = Prénom
+persons__person__name__           = Nom (patronyme)
+persons__person__email__          = Adresse courriel
+persons__person__language__       = Langue
+persons__person__title__          = Titre
+persons__person__country__        = Pays
+persons__person__state__          = État ou province
+persons__person__city__           = Ville
+persons__person__school__         = École
+persons__person__job__            = Profession
+persons__person__company__        = Société ou organisation
+persons__person__yearBirthday__   = Année anniversaire
+persons__person__mounthBirthday__ = Mois anniversaire
+persons__person__dayBirthday__    = Jour anniversaire
 persons__person__astrology__      = Signe astrologique
 persons__person__affinity__       = Affinité
-persons__person__interest__       = Centre d'intéret^60
-persons__person__comments__       = Commentaires^60
-persons__person__action__ = Action^10
+persons__person__interest__       = Centre d'intéret
+persons__person__comments__       = Commentaires
+persons__person__action__ = Action
