--- a/lib/messagebundles/xml/display/person_nl.properties
+++ b/lib/messagebundles/xml/display/person_nl.properties
@@ -1,20 +1,20 @@
 persons__person                   = Persoon
-persons__person__subname__        = Voornaam^60
-persons__person__name__           = Achternaam^60
-persons__person__email__          = Email^60
-persons__person__language__       = Taal^10
-persons__person__title__          = Titel^10
-persons__person__country__        = Land^40
-persons__person__state__          = Provincie^10
-persons__person__city__           = Stad^40
-persons__person__school__         = School^40
-persons__person__job__            = Beroep^40
-persons__person__company__        = Bedrijf of Organisatie^40
-persons__person__yearBirthday__   = Geboorten jaar^10
-persons__person__mounthBirthday__ = Geboorten Maand^10
-persons__person__dayBirthday__    = Geboorten Dag^10
+persons__person__subname__        = Voornaam
+persons__person__name__           = Achternaam
+persons__person__email__          = Email
+persons__person__language__       = Taal
+persons__person__title__          = Titel
+persons__person__country__        = Land
+persons__person__state__          = Provincie
+persons__person__city__           = Stad
+persons__person__school__         = School
+persons__person__job__            = Beroep
+persons__person__company__        = Bedrijf of Organisatie
+persons__person__yearBirthday__   = Geboorten jaar
+persons__person__mounthBirthday__ = Geboorten Maand
+persons__person__dayBirthday__    = Geboorten Dag
 persons__person__astrology__      = Sterrebeeld
 persons__person__affinity__       = Affiniteit
 persons__person__interest__       = Interresen
-persons__person__comments__       = Commentaar^60
-persons__person__action__ = Actie^10
+persons__person__comments__       = Commentaar
+persons__person__action__ = Actie
