--- a/lib/messagebundles/xml/display/story_fr.properties
+++ b/lib/messagebundles/xml/display/story_fr.properties
@@ -1,11 +1,11 @@
 stories__story               = Article
-stories__story__title__      = Titre^60
-stories__story__time__       = Date/Heure^40
-stories__story__author__     = Auteur^40
-stories__story__department__ = Département^40
-stories__story__topic__      = Sujet^60
-stories__story__section__    = Section^60
-stories__story__url__        = Lien^60
-stories__story__image__      = Image^60
-stories__story__comments__   = Commentaires^60
-stories__story__action__ = Action^10
+stories__story__title__      = Titre
+stories__story__time__       = Date/Heure
+stories__story__author__     = Auteur
+stories__story__department__ = Département
+stories__story__topic__      = Sujet
+stories__story__section__    = Section
+stories__story__url__        = Lien
+stories__story__image__      = Image
+stories__story__comments__   = Commentaires
+stories__story__action__ = Action
