--- a/lib/messagebundles/xml/display/story_nl.properties
+++ b/lib/messagebundles/xml/display/story_nl.properties
@@ -1,11 +1,11 @@
 stories__story               = Verhaal
-stories__story__title__      = Titel^60
-stories__story__time__       = Datum/Tijd^40
-stories__story__author__     = Auteur^40
-stories__story__department__ = Afdeling^40
-stories__story__topic__      = Onderwerp^60
-stories__story__section__    = Sectie^60
-stories__story__url__        = Link^60
-stories__story__image__      = Foto^60
-stories__story__comments__   = Commentaar^60
-stories__story__action__ = Actie^10
+stories__story__title__      = Titel
+stories__story__time__       = Datum/Tijd
+stories__story__author__     = Auteur
+stories__story__department__ = Afdeling
+stories__story__topic__      = Onderwerp
+stories__story__section__    = Sectie
+stories__story__url__        = Link
+stories__story__image__      = Foto
+stories__story__comments__   = Commentaar
+stories__story__action__ = Actie
