added mnemonic, disabled tooltip

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -2470,3 +2470,4 @@ SHARE_FILE_INDIVIDUALLY_POPUP_MENU_TOOLTIP=Files That Are Shared Individually an
 UNSHARE_FILE_INDIVIDUALLY_POPUP_MENU_LABEL=Stop Sharing File Individually
 SHARE_FILE_INDIVIDUALLY_ACTION_NAME=Share Individual File...
 SHARE_FILE_INDIVIDUALLY_ACTION_APPROVE_LABEL=Share
+SHARE_FILE_INDIVIDUALLY_ACTION_MNEMONIC=I
