Better phrase for LibraryTree's add to play list menu item

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -740,7 +740,7 @@ LIBRARY_TREE_NEW_FOLDER_LABEL=New Folder
 LIBRARY_TREE_SHARE_FOLDER_LABEL=Share Folder
 LIBRARY_TREE_UNSHARE_FOLDER_LABEL=Stop Sharing Folder
 LIBRARY_TREE_RENAME_FOLDER_LABEL=Rename
-LIBRARY_TREE_TO_PLAYLIST_FOLDER_LABEL=To Play List
+LIBRARY_TREE_TO_PLAYLIST_FOLDER_LABEL=Add Folder Contents to Play List
 LIBRARY_TREE_SAVED_DIRECTORY=Saved Files
 LIBRARY_TREE_INCOMPLETE_DIRECTORY=Incomplete Files
 LIBRARY_TREE_SHARED_FILES_DIRECTORY=Shared Files
