Toward making the Library GUI agnostic with regards to sharing files individually or not.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -2465,9 +2465,8 @@ DOWNLOAD_LOCATION_DIALOG_TITLE=Choose Save Location
 ################################################################################
 # Key/value pair for sharing of files specially/individually
 ################################################################################
-SHARE_FILE_INDIVIDUALLY_POPUP_MENU_LABEL=Share File Individually
-SHARE_FILE_INDIVIDUALLY_POPUP_MENU_TOOLTIP=Files That Are Shared Individually and not Part of any Shared Folder
-UNSHARE_FILE_INDIVIDUALLY_POPUP_MENU_LABEL=Stop Sharing File Individually
+SHARE_FILE_INDIVIDUALLY_POPUP_MENU_LABEL=Share File
+UNSHARE_FILE_INDIVIDUALLY_POPUP_MENU_LABEL=Stop Sharing File
 SHARE_FILE_INDIVIDUALLY_ACTION_NAME=Share Individual File...
 SHARE_FILE_INDIVIDUALLY_ACTION_APPROVE_LABEL=Share
 SHARE_FILE_INDIVIDUALLY_ACTION_MNEMONIC=I
