--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -397,7 +397,7 @@ SEARCH_BLOCK_HOST=Do you want to block search results from the host at
 # Magnet stuff
 ################################################################################
 MAGNET_COPY_MAGNET_LINKS_LABEL=Copy Magnet Links to Clipboard
-MAGNET_COPY_MAGNET_LINKS_TOOLTIP=Copy the Magnet Links of the selected Files to the Clipboard
+MAGNET_COPY_MAGNET_LINKS_TOOLTIP=Copy the Magnet Links of the Selected Files to the Clipboard
 
 ################################################################################
 # Search actions
