added support for recognizing asf/wma/wmv files which may require a license lookup.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1184,7 +1184,7 @@ LICENSE_WEED=Weedshare
 # Messages for Unknown licenses
 ################################################################################
 LICENSE_UNKNOWN_TITLE=License Details
-LICENSE_UNKNOWN_INVALID=LimeWire was unable to determine the license for this file.
+LICENSE_UNKNOWN_INVALID=This file may require a license in order to open and view.
 
 ################################################################################
 # Keys for the titles of the options panes. The corresponding values represent
