--- a/lib/messagebundles/MessagesBundle_de.properties
+++ b/lib/messagebundles/MessagesBundle_de.properties
@@ -117,7 +117,7 @@ OPTIONS_RESTART_REQUIRED=Eine oder mehrere Optionen werden erst nach dem nächste
 #### OPTIONS_BUTTON_REVERT_TO_DEFAULT=Restore Defaults
 OPTIONS_BUTTON_REVERT_TO_DEFAULT=Standard verwenden
 #### OPTIONS_BUTTON_REVERT_TO_DEFAULT_TIP=Revert All Settings to the Factory Defaults
-OPTIONS_BUTTON_REVERT_TO_DEFAULT_TIP=Für alle Optionen zum Standard zurückkehren.
+OPTIONS_BUTTON_REVERT_TO_DEFAULT_TIP=Setzt Alle Einstellungen auf die Standardwerte Zurück.
 
 ################################################################################
 # Key/value pairs for general terms, such as "yes" and "no"
@@ -143,7 +143,7 @@ GENERAL_FINISHED_ON=Beendet am
 #### GENERAL_TIME_SPENT=Time Spent
 GENERAL_TIME_SPENT=Benötigte Zeit
 #### GENERAL_REVERT_TO_DEFAULT=Revert To Default
-GENERAL_REVERT_TO_DEFAULT=Standard verwenden
+GENERAL_REVERT_TO_DEFAULT=Standard Verwenden
 #### GENERAL_MORE_OPTIONS=More Options
 GENERAL_MORE_OPTIONS=Weitere Einstellungen
 
@@ -189,9 +189,9 @@ ABOUT_LICENSE_LABEL=Lizenz
 #### ABOUT_LICENSE_TIP=Display the license agreement about this software.
 ABOUT_LICENSE_TIP=Zeigt die Lizenzvereinbarung für diese Software.
 #### ABOUT_SCROLL_CHECK_BOX_LABEL=Automatically Scroll
-ABOUT_SCROLL_CHECK_BOX_LABEL=Automatisch rollen
+ABOUT_SCROLL_CHECK_BOX_LABEL=Automatisch Scrollen
 #### ABOUT_BUTTON_TIP=Close the About Window
-ABOUT_BUTTON_TIP=Schließt dieses Fenster.
+ABOUT_BUTTON_TIP=Schließt dieses Fenster
 
 ###################################################################
 # Key/value pairs for the tip of the day window (not the tips themselves)
@@ -221,9 +221,9 @@ GETTING_STARTED_CONTENTS=Um mit LimeWire zu beginnen, suchen Sie das Textfeld li
 # Key/value pairs for the Going Pro image.
 ###################################################################
 #### GOING_PRO_TITLE=The Most Advanced File Sharing Program on the Planet!
-GOING_PRO_TITLE=Das am weitesten entwickelte File Sharing Programm!
-#### GOING_PRO_DESCRIPTION=Better search results\nTurbo-Charged download speeds\nConnections to more sources\nPersonalized tech support\nSix months of free updates
-GOING_PRO_DESCRIPTION=Bessere Suchresultate\nTurbo-beschleunigte Downloadgeschwindigkeit\nVerbindungen zu mehr Quellen\nPersönlicher technische Unterstützung\nKostenlose Updates fuer sechs Monate
+GOING_PRO_TITLE=Das am fortschrittlichste File Sharing Programm!
+#### GOING_PRO_DESCRIPTION=Better search results\nTurbo charged download speeds\nConnections to more sources\nPersonalized tech support\nSix months of free updates
+GOING_PRO_DESCRIPTION=Bessere Suchergebnisse\nTurbo-beschleunigte Downloadgeschwindigkeit\nVerbindungen zu mehr Quellen\nPersönliche technische Unterstützung\nKostenlose Updates für sechs Monate
 
 ###################################################################
 # Key/value pairs for the Windows system tray
@@ -231,7 +231,7 @@ GOING_PRO_DESCRIPTION=Bessere Suchresultate\nTurbo-beschleunigte Downloadgeschwi
 #### TRAY_TOOLTIP=LimeWire: Running the Gnutella Network
 TRAY_TOOLTIP=LimeWire: Verbindung zum Gnutella-Netzwerk
 #### TRAY_RESTORE_LABEL=Restore
-TRAY_RESTORE_LABEL=Öffnen
+TRAY_RESTORE_LABEL=Wiederherstellen
 #### TRAY_ABOUT_LABEL=About
 TRAY_ABOUT_LABEL=Über...
 #### TRAY_EXIT_LATER_LABEL=Exit after Transfers
@@ -253,7 +253,7 @@ LIBRARY_TITLE=Dateisammlung
 #### OPTIONS_TITLE=Options
 OPTIONS_TITLE=Einstellungen
 #### STATS_TITLE=Statistics
-STATS_TITLE=Statistik
+STATS_TITLE=Statistiken
 #### DOWNLOAD_TITLE=Downloads
 DOWNLOAD_TITLE=Downloads
 #### UPLOAD_TITLE=Uploads
@@ -487,7 +487,7 @@ MENU_TOOLS_TITLE=Werkzeuge
 #### MENU_TOOLS_TITLE_MNEMONIC=T
 MENU_TOOLS_TITLE_MNEMONIC=W
 #### MENU_TOOLS_STATISTICS=Statistics
-MENU_TOOLS_STATISTICS=Statistik
+MENU_TOOLS_STATISTICS=Statistiken
 #### MENU_TOOLS_STATISTICS_MNEMONIC=S
 MENU_TOOLS_STATISTICS_MNEMONIC=S
 #### MENU_TOOLS_STATISTICS_ACCESSIBLE=Display the Statistics Screen
@@ -644,7 +644,7 @@ AUTO_DL_CHECKBOX_TOOLTIP=Limewire wird die Dateien für Sie herunterladen.
 #### SEARCH_TYPE_KEYWORD=Keyword
 SEARCH_TYPE_KEYWORD=Suchwort
 #### SEARCH_TYPE_WHATSNEW=What's New
-SEARCH_TYPE_WHATSNEW=Was ist neu
+SEARCH_TYPE_WHATSNEW=Was gibt's Neues
 #### SEARCH_TYPE_BROWSEHOST=Direct Connect
 SEARCH_TYPE_BROWSEHOST=Direkte Verbindung
 #### SEARCH_BROWSEHOST_TITLE=Got Friends?
@@ -664,7 +664,7 @@ SEARCH_WHATSNEW_TITLE_ONE=Wissen Sie nicht
 #### SEARCH_WHATSNEW_TITLE_TWO=What To Look For?
 SEARCH_WHATSNEW_TITLE_TWO=was gesucht werden soll?
 #### SEARCH_WHATSNEW_DESC=A "What's New" search will search for files that have been recently added to the network.
-SEARCH_WHATSNEW_DESC=Eine "Was ist neu" Suche sucht nach Dateien, die kürzlich zum Netz hinzugefügt wurden.
+SEARCH_WHATSNEW_DESC=Eine "Was gibt's Neues" Suche sucht nach Dateien, die kürzlich zum Netz hinzugefügt wurden.
 #### SEARCH_CURRENT_SEARCH=Current Search:
 SEARCH_CURRENT_SEARCH=Aktuelle Suche:
 #### SEARCH_WHATS_NEW_SMALL=New
@@ -763,7 +763,7 @@ SEARCH_FILTER_MEDIA=Medien
 #### DOWNLOAD_LAUNCH_BUTTON_LABEL=Preview
 DOWNLOAD_LAUNCH_BUTTON_LABEL=Vorschau
 #### DOWNLOAD_LAUNCH_BUTTON_TIP=Preview Selected Downloads
-DOWNLOAD_LAUNCH_BUTTON_TIP=Eine Vorschau des ausgewählten Downloads anzeigen.
+DOWNLOAD_LAUNCH_BUTTON_TIP=Eine Vorschau der ausgewählten Downloads anzeigen.
 #### DOWNLOAD_LAUNCH_BUTTON_COMPLETED_LABEL=Launch
 #? DOWNLOAD_LAUNCH_BUTTON_COMPLETED_LABEL=
 #### DOWNLOAD_LAUNCH_BUTTON_COMPLETED_TIP=Launch Selected Downloads
@@ -893,17 +893,17 @@ STATISTICS_CONNECTION_FAIR_TIP=Ihre Verbindung mit dem Netzwerk wird besser.
 #### STATISTICS_CONNECTION_GOOD=Good
 STATISTICS_CONNECTION_GOOD=gut
 #### STATISTICS_CONNECTION_GOOD_TIP=You are not yet fully connected to the network, but have a very good connection.
-STATISTICS_CONNECTION_GOOD_TIP=Sie sind nicht noch komplett mit dem Netzwerk verbunden, aber haben eine sehr gute Verbindung.
+STATISTICS_CONNECTION_GOOD_TIP=Sie sind noch nicht komplett mit dem Netzwerk verbunden, aber haben eine sehr gute Verbindung.
 #### STATISTICS_CONNECTION_EXCELLENT=Excellent
 STATISTICS_CONNECTION_EXCELLENT=ausgezeichnet
 #### STATISTICS_CONNECTION_EXCELLENT_TIP=Your connection to the network is very strong.
 STATISTICS_CONNECTION_EXCELLENT_TIP=Sie haben eine sehr gute Verbindung mit dem Netzwerk.
 #### STATISTICS_CONNECTION_TURBO_CHARGED=Turbo-Charged
-STATISTICS_CONNECTION_TURBO_CHARGED=turbocharged
+STATISTICS_CONNECTION_TURBO_CHARGED=Turbo-beschleunigt
 #### STATISTICS_CONNECTION_TURBO_CHARGED_TIP_FREE=You can experience Turbo-Charged connections all the time with LimeWire PRO.
 #? STATISTICS_CONNECTION_TURBO_CHARGED_TIP_FREE=
 #### STATISTICS_CONNECTION_TURBO_CHARGED_TIP_PRO=Your connection to the network is extremely strong.
-STATISTICS_CONNECTION_TURBO_CHARGED_TIP_PRO=Ihre Verbindung mit dem Netzwerk ist extrem gut.
+STATISTICS_CONNECTION_TURBO_CHARGED_TIP_PRO=Ihre Verbindung mit dem Netzwerk ist äußerst gut.
 #### STATISTICS_CONNECTION_QUALITY=Quality:
 STATISTICS_CONNECTION_QUALITY=Qualität:
 #### STATISTICS_CONNECTION_IDLE=Idle
@@ -1393,7 +1393,7 @@ INIT_SAVE_DEFAULT_BUTTON_TIP=Verwendet das Standardverzeichnis.
 #### PRO_TITLE=Upgrade to PRO
 PRO_TITLE=Upgrade auf LimeWire PRO
 #### PRO_LABEL_THANKS=For Turbo-Charged downloads, get LimeWire PRO. We guarantee that you will love the improved performance of PRO. Thank you for helping keep the Internet open by running LimeWire.
-PRO_LABEL_THANKS=Vielen Dank, dass Sie den Netzwerk-Gedanken durch die Benutzung von LimeWire unterstützt. Bitte denken Sie über ein Upgrade auf LimeWire PRO nach, um unsere Entwicklungsarbeit und das gesamte Netzwerk zu unterstützen.
+PRO_LABEL_THANKS=Vielen Dank, dass Sie den Netzwerk-Gedanken durch die Benutzung von LimeWire unterstützen. Bitte denken Sie über ein Upgrade auf LimeWire PRO nach, um unsere Entwicklungsarbeit und das gesamte Netzwerk zu unterstützen.
 #### PRO_LABEL_QUESTION=Upgrade to LimeWire PRO?
 PRO_LABEL_QUESTION=Upgrade auf LimeWire PRO?
 #### GO_PRO_TIP=Get LimeWire PRO Now
@@ -2075,7 +2075,7 @@ OPTIONS_LOCALIZE_COUNTRY_BOX_LABEL=Land
 # in the options window
 ################################################################################
 #### OPTIONS_SAVE_ON_CLOSE=You have made changes to some settings. Would you like to save these changes?
-OPTIONS_SAVE_ON_CLOSE=Sie haben manchen Einstellungen modifiziert. Möchten Sie diesen Änderungen speichern?
+OPTIONS_SAVE_ON_CLOSE=Sie haben gewisse Einstellungen modifiziert. Möchten Sie diese Änderungen speichern?
 #### OPTIONS_SAVE_DIR_TITLE=Save Directory
 OPTIONS_SAVE_DIR_TITLE=Zielverzeichnis
 #### OPTIONS_SAVE_DIR_LABEL=You can choose the directory for saving files.
@@ -2603,7 +2603,7 @@ OPTIONS_CONNECT_PREF_SLIDER_MAX_LABEL=Immer
 #### OPTIONS_CONNECT_LOCALE_PREF_TITLE=Locale Preferencing
 OPTIONS_CONNECT_LOCALE_PREF_TITLE=Lokalisierung vorziehen
 #### OPTIONS_CONNECT_LOCALE_PREF_LABEL=You can choose to preference hosts using the same language as you.
-OPTIONS_CONNECT_LOCALE_PREF_LABEL=Sie können wählen, Rechner, die die selbe Sprache wie Sie benutzen, zu bevorzugen.
+OPTIONS_CONNECT_LOCALE_PREF_LABEL=Sie können wählen, Rechner zu bevorzugen, die die selbe Sprache wie Sie benutzen.
 #### OPTIONS_CONNECT_LOCALE_PREF_DISPLAY_CHECK_BOX_LABEL=Turn preferencing on:
 OPTIONS_CONNECT_LOCALE_PREF_DISPLAY_CHECK_BOX_LABEL=Vorziehung aufdrehen:
 
@@ -2709,7 +2709,7 @@ OPTIONS_PROXY_LOGIN_PASSWORD_LABEL=Kennwort
 #### STATS_BANDWIDTH_PANE_TITLE=Bandwidth
 STATS_BANDWIDTH_PANE_TITLE=Bandbreite
 #### STATS_BANDWIDTH_PANE_LABEL=Bandwidth statistics include complete information on all bandwidth sent upstream and downstream. Click on one of the categories to see the desired statistics.
-STATS_BANDWIDTH_PANE_LABEL=Die Bandbreitenstatistik enthält vollständige Informationen über die gesamte Bandbreite die für eingehende und ausgehende Daten verwendet wurde. Klicken Sie auf eine der Kategorien, um die gewünschte Statistik zu sehen.
+STATS_BANDWIDTH_PANE_LABEL=Die Bandbreitenstatistiken enthalten vollständige Informationen über die gesamte Bandbreite, die für eingehende und ausgehende Daten verwendet wurde. Klicken Sie auf eine der Kategorien, um die gewünschte Statistiken zu sehen.
 
 #### STATS_NET_PANE_TITLE=Network
 STATS_NET_PANE_TITLE=Netzwerk
@@ -3137,7 +3137,7 @@ STATS_ERROR_GENERIC_LABEL=Generische Fehler beim Lesen von Nachrichten.
 #### STATS_ERROR_QUERIES_TITLE=Queries
 STATS_ERROR_QUERIES_TITLE=Such-Anfrage
 #### STATS_ERROR_QUERIES_LABEL=Errors while reading query messages.
-STATS_ERROR_QUERIES_LABEL=Fehrler beim Lesen von Such-Anfragen.
+STATS_ERROR_QUERIES_LABEL=Fehler beim Lesen von Such-Anfragen.
 #### STATS_ERROR_QUERY_REPLIES_TITLE=Query Replies
 STATS_ERROR_QUERY_REPLIES_TITLE=Such-Antworten
 #### STATS_ERROR_QUERY_REPLIES_LABEL=Errors while reading query reply messages.
@@ -3787,7 +3787,7 @@ HOPS9=Hops 9
 
 # Special Query labels
 #### WHAT_IS_NEW_QUERIES=What's New?
-WHAT_IS_NEW_QUERIES=Was ist neu?
+WHAT_IS_NEW_QUERIES=Was gibt's Neues?
 
 # TTL labels
 #### TTL0=TTL 0
@@ -4033,29 +4033,29 @@ UP_INCOMING_ACCEPT_UP=Ein: angenommen (Ultrapeer)
 #### UP_INCOMING_REJECT_NO_ROOM_LEAF=In Rej. (All Slots Taken)
 UP_INCOMING_REJECT_NO_ROOM_LEAF=Ein: ablehnte (besetzte Raüme)
 #### UP_INCOMING_REJECT_NO_ROOM_UP=In Rej. (Network Needs Ultrapeer)
-UP_INCOMING_REJECT_NO_ROOM_UP=Ein: ablehnte (Netwerk bedarf Ultrapeer)
+UP_INCOMING_REJECT_NO_ROOM_UP=Ein: abgelehnte (Netwerk bedarf Ultrapeer)
 #### OUTGOING_BAD_CONNECT=Bad Connect
-OUTGOING_BAD_CONNECT=Schlecht Verbindung
+OUTGOING_BAD_CONNECT=Schlechte Verbindung
 #### OUTGOING_SERVER_REJECT=Server Reject
-OUTGOING_SERVER_REJECT=Ablehnte Diener
+OUTGOING_SERVER_REJECT=Abgelehnter Server
 #### OUTGOING_SERVER_UNKNOWN=Server Unknown
-OUTGOING_SERVER_UNKNOWN=Unbekannt Diener
+OUTGOING_SERVER_UNKNOWN=Unbekannter Server
 #### OUTGOING_CLIENT_REJECT=Client Reject
-OUTGOING_CLIENT_REJECT=Ablehnte Klient
+OUTGOING_CLIENT_REJECT=Abgelehnter Klient
 #### OUTGOING_CLIENT_UNKNOWN=Client Unknown
-OUTGOING_CLIENT_UNKNOWN=Unbekannt Klient
+OUTGOING_CLIENT_UNKNOWN=Unbekannter Klient
 #### SUCCESSFUL_OUTGOING=Successful
-SUCCESSFUL_OUTGOING=Gelungen
+SUCCESSFUL_OUTGOING=Erfolgreich
 #### INCOMING_BAD_CONNECT=Bad Connect
-INCOMING_BAD_CONNECT=Schlecht Verbindung
+INCOMING_BAD_CONNECT=Schlechte Verbindung
 #### INCOMING_SERVER_UNKNOWN=Server Unknown
-INCOMING_SERVER_UNKNOWN=Unbekannt Diener
+INCOMING_SERVER_UNKNOWN=Unbekannter Server
 #### INCOMING_CLIENT_REJECT=Client Reject
-INCOMING_CLIENT_REJECT=Ablehnte Klient
+INCOMING_CLIENT_REJECT=Abgelehnter Klient
 #### INCOMING_CLIENT_UNKNOWN=Client Unknown
-INCOMING_CLIENT_UNKNOWN=Unbekannt Klient
+INCOMING_CLIENT_UNKNOWN=Unbekannter Klient
 #### SUCCESSFUL_INCOMING=Successful
-SUCCESSFUL_INCOMING=Gelungen
+SUCCESSFUL_INCOMING=Erfolgreich
 #### INCOMING_NO_CONCLUSION=No Conclusion
 INCOMING_NO_CONCLUSION=Kein Abschluss
 #### CRAWLER_CONNECTION=Crawler
@@ -4063,20 +4063,20 @@ CRAWLER_CONNECTION=Crawler
 #### OUTGOING_LIMEWIRE_ULTRAPEER_REJECT=LimeWire Ultrapeers
 OUTGOING_LIMEWIRE_ULTRAPEER_REJECT=LimeWire Ultrapeers
 #### OUTGOING_LIMEWIRE_LEAF_REJECT=LimeWire Leaves
-OUTGOING_LIMEWIRE_LEAF_REJECT=LimeWire Endpunkten
+OUTGOING_LIMEWIRE_LEAF_REJECT=LimeWire Endpunkte
 #### OUTGOING_OTHER_ULTRAPEER_REJECT=Other Ultrapeers
-OUTGOING_OTHER_ULTRAPEER_REJECT=Anderen Ultrapeers
+OUTGOING_OTHER_ULTRAPEER_REJECT=Andere Ultrapeers
 #### OUTGOING_OTHER_LEAF_REJECT=Other Leaves
-OUTGOING_OTHER_LEAF_REJECT=Anderen Endpunkten
+OUTGOING_OTHER_LEAF_REJECT=Andere Endpunkte
 
 # Advanced OOB statistics
 #### ALL_OOB_REQUESTS=Responses Requested
-ALL_OOB_REQUESTS=Ersuchten Antworten
+ALL_OOB_REQUESTS=Angeforderte Antworten
 #### ALL_OOB_RESPONSES=Responses Received
-ALL_OOB_RESPONSES=Erhalten Antworten
+ALL_OOB_RESPONSES=Empfangene Antworten
 #### ALL_OOB_BYPASSED=Responses Bypassed
-ALL_OOB_BYPASSED=Geignorierten Antworten
+ALL_OOB_BYPASSED=Ignorierte Antworten
 #### STATS_OOB_THROUGHPUT_TITLE=OOB Success Rate
-STATS_OOB_THROUGHPUT_TITLE=OOB Gelungen Rate
+STATS_OOB_THROUGHPUT_TITLE=OOB Erfolgsquote
 #### STATS_OOB_THROUGHPUT_LABEL=Number of Responses Requested and Received via the OOB Protocol
-#? STATS_OOB_THROUGHPUT_LABEL=
+STATS_OOB_THROUGHPUT_LABEL=Anzahl der Angeforderten und Empfangenen Antworten über das OOB Protokoll
