... for input requiring action

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -191,7 +191,7 @@ MENU_FILE_CONNECT_ACCESSIBLE=Connect to the Network
 MENU_FILE_DISCONNECT=Disconnect
 MENU_FILE_DISCONNECT_MNEMONIC=I
 MENU_FILE_DISCONNECT_ACCESSIBLE=Disconnect from the Network
-MENU_FILE_LIBRARY_ADD_SHARED_FOLDER=Add Folder to Share
+MENU_FILE_LIBRARY_ADD_SHARED_FOLDER=Add Folder to Share...
 MENU_FILE_LIBRARY_ADD_SHARED_FOLDER_MNEMONIC=A
 MENU_FILE_LIBRARY_ADD_SHARED_FOLDER_ACCESSIBLE=Add a Folder that You Would Like to Share
 MENU_FILE_LIBRARY_NEW_FOLDER=New Folder
