Generic advanced sub menu label. Don't use inet socket address' toString method.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -67,6 +67,7 @@ GENERAL_DEFAULT_BUTTON_LABEL=Use Default
 GENERAL_BROWSE_BUTTON_LABEL=Browse...
 GENERAL_BROWSE_HOST_LABEL=Browse Host
 GENERAL_BROWSE_HOST_TIP=View All Files on the Selected Computer
+GENERAL_ADVANCED_SUB_MENU=Advanced
 
 ################################################################################
 # Keys/value pairs for right-click context menus.
