--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -53,13 +53,13 @@ HAS_TIPS_OF_THE_DAY=false
 # Keys/value pairs for general strings that can be used in any components
 ################################################################################
 GENERAL_OK_BUTTON_LABEL=OK
-GENERAL_OK_BUTTON_TIP=Apply Operation.
+GENERAL_OK_BUTTON_TIP=Apply Operation
 GENERAL_CANCEL_BUTTON_LABEL=Cancel
-GENERAL_CANCEL_BUTTON_TIP=Cancel Operation.
+GENERAL_CANCEL_BUTTON_TIP=Cancel Operation
 GENERAL_APPLY_BUTTON_LABEL=Apply
-GENERAL_APPLY_BUTTON_TIP=Apply Operation.
+GENERAL_APPLY_BUTTON_TIP=Apply Operation
 GENERAL_CLOSE_BUTTON_LABEL=Close
-GENERAL_CLOSE_BUTTON_TIP=Close the Window.
+GENERAL_CLOSE_BUTTON_TIP=Close the Window
 GENERAL_BACK_BUTTON_LABEL=<< Back
 GENERAL_NEXT_BUTTON_LABEL=Next >>
 GENERAL_FINISH_BUTTON_LABEL=Finish
@@ -127,13 +127,13 @@ ABOUT_LABEL_START=LimeWire
 ABOUT_LABEL_END=Copyright (c)2000-2005 Lime Wire LLC
 ABOUT_LABEL_TITLE=About LimeWire
 ABOUT_CREDITS_LABEL=Credits
-ABOUT_CREDITS_TIP=Display credits information about LimeWire.
+ABOUT_CREDITS_TIP=Display Credits Information about LimeWire
 ABOUT_NOTICE_LABEL=Notice
-ABOUT_NOTICE_TIP=Display distribution and contact information.
+ABOUT_NOTICE_TIP=Display Distribution and Contact Information
 ABOUT_LICENSE_LABEL=License
-ABOUT_LICENSE_TIP=Display the license agreement about this software.
+ABOUT_LICENSE_TIP=Display the License Agreement about This Software
 ABOUT_SCROLL_CHECK_BOX_LABEL=Automatically Scroll
-ABOUT_BUTTON_TIP=Close the About Window
+ABOUT_BUTTON_TIP=Close This Window
 
 ###################################################################
 # Key/value pairs for the tip of the day window (not the tips themselves)
@@ -481,7 +481,7 @@ LIBRARY_EXPLORE_BUTTON_TIP=Open Library Folder
 LIBRARY_PLAYLIST_BUTTON_LABEL=Enqueue
 LIBRARY_PLAYLIST_BUTTON_TIP=Add Selected Files to the Play List
 LIBRARY_ANNOTATE_BUTTON_LABEL=Describe...
-LIBRARY_ANNOTATE_BUTTON_TIP=Describe Selected File
+LIBRARY_ANNOTATE_BUTTON_TIP=Add Description to Selected File
 LIBRARY_RESUME_BUTTON_LABEL=Resume
 LIBRARY_RESUME_BUTTON_TIP=Continue Downloading Selected Incomplete File
 LIBRARY_RENAME_BUTTON_LABEL=Rename
@@ -621,8 +621,8 @@ DOWNLOAD_FROM=from
 DOWNLOAD_MAGNET_DIALOG_END=?
 DOWNLOAD_HASH_ONLY_MAGNET=LimeWire will not be able to start the download you have selected unless you start a search for it.
 DOWNLOAD_PRIORITY_ACTIVE=Active
-DOWNLOAD_PRIORITY_UP_BUTTON_TIP=Move the selected download closer to becoming active
-DOWNLOAD_PRIORITY_DOWN_BUTTON_TIP=Move the selected download further from becoming active
+DOWNLOAD_PRIORITY_UP_BUTTON_TIP=Move the Selected Download Closer to Becoming Active
+DOWNLOAD_PRIORITY_DOWN_BUTTON_TIP=Move the Selected Download Further from Becoming Active
 DOWNLOAD_PRIORITY_PRIORITIZE=Queue
 
 ###################################################################
@@ -635,7 +635,7 @@ UPLOAD_KILL_BUTTON_TIP=Stop Selected Uploads
 UPLOAD_CLEAR_BUTTON_LABEL=Clear Inactive
 UPLOAD_CLEAR_BUTTON_TIP=Remove Inactive Uploads
 UPLOAD_CHAT_BUTTON_LABEL=Chat with Host
-UPLOAD_CHAT_BUTTON_TIP=Chat with another user of the selected host
+UPLOAD_CHAT_BUTTON_TIP=Chat with Another User of the Selected Host
 UPLOAD_TABLE_STRING_NAME=Name
 UPLOAD_TABLE_STRING_HOST=Host
 UPLOAD_TABLE_STRING_SIZE=Size
@@ -728,8 +728,6 @@ CV_TABLE_STRING_KBPSEC=KB/s
 CV_ADD_HOST_LABEL=Host:
 CV_ADD_PORT_LABEL=Port:
 CV_ADD_DIALOG_TITLE=Add Gnutella Connection
-CV_MEDIATYPE=Mediatype
-CV_DIRECTORY=Save Folder
 
 ################################################################################
 # Key/value pairs for strings in the library window
@@ -832,7 +830,7 @@ FILE_CHOOSER_DIRECTORY_TITLE=Select Folder
 ################################################################################
 INIT_SAVE_DIRECTORY_FIELD_LABEL=Folder:
 INIT_SAVE_BROWSE_BUTTON_LABEL=Browse...
-INIT_SAVE_BROWSE_BUTTON_TIP=Choose another Folder
+INIT_SAVE_BROWSE_BUTTON_TIP=Choose Another Folder
 INIT_SAVE_DEFAULT_BUTTON_LABEL=Use Default
 INIT_SAVE_DEFAULT_BUTTON_TIP=Use the Default Folder
 
@@ -1044,7 +1042,7 @@ MESSAGE_INCOMPLETE_DIRECTORY_END=the folder reserved for incomplete files.
 MESSAGE_INVALID_SAVE_DIRECTORY=LimeWire was unable to use the specified folder for saving files. Please try a different folder.
 MESSAGE_FILE_CORRUPT=LimeWire has detected a corruption in the file
 MESSAGE_CONTINUE_DOWNLOAD=Do you want to continue the download?
-MESSAGE_LANG_CHANGE=Please note that you must restart limewire for the language to change. Also, make sure that you have the required fonts for the selected language.
+MESSAGE_LANG_CHANGE=Please note that you must restart LimeWire for the language to change. Also, make sure that you have the required fonts for the selected language.
 MESSAGE_SENSITIVE_SHARE_TOP=You are attempting to share a folder that is likely to contain sensitive information:
 MESSAGE_SENSITIVE_SHARE_BOTTOM=Share this folder?
 
@@ -1244,14 +1242,17 @@ OPTIONS_SAVE_DIR_LABEL=You can choose the folder for saving files.
 OPTIONS_SAVE_DIR_BOX_LABEL=Folder:
 OPTIONS_SAVE_DIR_BROWSE_BUTTON_LABEL=Browse...
 OPTIONS_SAVE_DIR_DEFAULT_BUTTON_LABEL=Use Default
-OPTIONS_SAVE_DIR_BROWSE_BUTTON_TIP=Choose another Folder
+OPTIONS_SAVE_DIR_BROWSE_BUTTON_TIP=Choose Another Folder
 OPTIONS_SAVE_DIR_DEFAULT_BUTTON_TIP=Use the Default Folder
-OPTIONS_SAVE_MEDIATYPE_DIR_LABEL=Specify an optional download folder for each mediatype.
+OPTIONS_SAVE_MEDIATYPE_DIR_LABEL=Specify an optional download folder for each media type.
 OPTIONS_SAVE_MEDIATYPE_BROWSE_TIP=Open Dialog to Select a Folder
 OPTIONS_SAVE_RESET_BUTTON_LABEL=Reset
 OPTIONS_SAVE_RESET_BUTTON_TIP=Reset to Default Download Folder
 OPTIONS_SAVE_MEDIATYPE_DIR_BROWSE_BUTTON_LABEL=Browse...
-OPTIONS_SAVE_MEDIATYPE_DIR_BROWSE_BUTTON_TIP=Choose another Folder
+OPTIONS_SAVE_MEDIATYPE_DIR_BROWSE_BUTTON_TIP=Choose Another Folder
+OPTIONS_SAVE_MEDIATYPE=Media Type
+OPTIONS_SAVE_DIRECTORY=Save Folder
+
 OPTIONS_PURGE_INCOMPLETE_TIME_TITLE=Incomplete Files
 OPTIONS_PURGE_INCOMPLETE_TIME_LABEL=You can automatically delete old incomplete download files.
 OPTIONS_PURGE_INCOMPLETE_TIME_NUMBER_LABEL=Days to Keep Incomplete Files:
@@ -1495,10 +1496,10 @@ OPTIONS_SKIN_BROWSE_BUTTON_LABEL=Browse Skins...
 OPTIONS_SKIN_PREVIEW_BUTTON_LABEL=Preview
 OPTIONS_SKIN_DEFAULT_BUTTON_LABEL=No Skin
 OPTIONS_SKIN_DOWNLOAD_SKINS_BUTTON_LABEL=Download...
-OPTIONS_SKIN_BROWSE_BUTTON_TIP=Choose another skin
-OPTIONS_SKIN_PREVIEW_BUTTON_TIP=Preview selected skin
-OPTIONS_SKIN_DEFAULT_BUTTON_TIP=Don't skin LimeWire
-OPTIONS_SKIN_DOWNLOAD_SKINS_BUTTON_TIP=Download new skins from www.javootoo.com...
+OPTIONS_SKIN_BROWSE_BUTTON_TIP=Choose Another Skin
+OPTIONS_SKIN_PREVIEW_BUTTON_TIP=Preview Selected Skin
+OPTIONS_SKIN_DEFAULT_BUTTON_TIP=Do Not Skin LimeWire
+OPTIONS_SKIN_DOWNLOAD_SKINS_BUTTON_TIP=Download New Skins from www.javootoo.com...
 SKIN_APPLY_MESSAGE=Skin changes only take effect after restarting LimeWire...
 SKIN_RESTART_NEEDED=LimeWire must be restarted for this skin change to take effect.
 
@@ -2469,15 +2470,17 @@ SAVE_LOCATION_SECURITY_VIOLATION_ERROR=Could not set file location, the filename
 SAVE_LOCATION_FILE_NOT_REGULAR_ERROR=Could not set file location because {0} is not a regular file.
 SAVE_LOCATION_FILESYSTEM_ERROR=Could not set file location due to an error in the filesystem.
 SAVE_LOCATION_ALREADY_DOWNLOADING_ERROR=The same file is already being downloaded.
+
 ################################################################################
 # Key/value pair for download location dialog
 ################################################################################
 DOWNLOAD_LOCATION_DIALOG_TITLE=Choose Save Location
+
 ################################################################################
 # Key/value pair for sharing of files specially/individually
 ################################################################################
-SHARE_FILE_INDIVIDUALLY_POPUP_MENU_LABEL=Share File
-UNSHARE_FILE_INDIVIDUALLY_POPUP_MENU_LABEL=Stop Sharing File
-SHARE_FILE_INDIVIDUALLY_ACTION_NAME=Share Individual File...
-SHARE_FILE_INDIVIDUALLY_ACTION_APPROVE_LABEL=Share
-SHARE_FILE_INDIVIDUALLY_ACTION_MNEMONIC=I
+SHARE_FILE_POPUP_MENU_LABEL=Share File
+UNSHARE_FILE_POPUP_MENU_LABEL=Stop Sharing File
+SHARE_FILE_ACTION_NAME=Share File...
+SHARE_FILE_ACTION_APPROVE_LABEL=Share
+SHARE_FILE_ACTION_MNEMONIC=I
