--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -453,11 +453,12 @@ DOWNLOAD_LAUNCH_BUTTON_LABEL=Preview
 DOWNLOAD_LAUNCH_BUTTON_TIP=Preview Selected Downloads
 DOWNLOAD_LAUNCH_BUTTON_COMPLETED_LABEL=Launch
 DOWNLOAD_LAUNCH_BUTTON_COMPLETED_TIP=Launch Selected Downloads
+DOWNLOAD_POPUP_MENU_LAUNCH_COMPLETED_LABEL=Launch Download
 DOWNLOAD_KILL_BUTTON_LABEL=Cancel
 DOWNLOAD_KILL_BUTTON_TIP=Cancel Selected Downloads
 DOWNLOAD_KILL_BUTTON_COMPLETED_LABEL=Clear
 DOWNLOAD_KILL_BUTTON_COMPLETED_TIP=Clear Selected Downloads
-DOWNLOAD_POPUP_MENU_KILL_COMPLETED_LABEL=Clear Downloads
+DOWNLOAD_POPUP_MENU_KILL_COMPLETED_LABEL=Clear Download
 DOWNLOAD_RESUME_BUTTON_LABEL=Resume
 DOWNLOAD_RESUME_BUTTON_TIP=Reattempt Selected Downloads
 DOWNLOAD_SOURCES_BUTTON_LABEL=Find Sources
@@ -570,6 +571,7 @@ STATISTICS_CONNECTION_WAKING_UP_TIP=LimeWire is waking up from sleep mode.
 ################################################################################
 DOWNLOAD_POPUP_MENU_KILL_DOWNLOAD=Cancel Download
 DOWNLOAD_POPUP_MENU_RESUME=Resume Download
+DOWNLOAD_POPUP_MENU_SOURCES=Find More Sources for Download
 DOWNLOAD_POPUP_MENU_PAUSE=Pause Download
 DOWNLOAD_POPUP_MENU_LAUNCH=Preview Download
 DOWNLOAD_POPUP_MENU_CHAT=Chat with Host
