- Cleaned up old ConnectionMediator code, fixing deprecated code and removing unnecessary imports, variables, and casts. - Improved some GUI elements:   - Changed "Select Type:" to "Select Search Type:" (above the search type buttons)   - Changed the "Any Type" button to "All Types"   - Capitalized the "Sharing <#> files" in the status bar   - Removed the extra spaces around the parentheses in the Connection tab (now consistent with Monitor tab)   - Capitalized the text on the Monitor tab (now consistent with rest of GUI)

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -394,7 +394,7 @@ SEARCH_WHATSNEW_TITLE_TWO=What To Look For?
 SEARCH_WHATSNEW_DESC=A "What's New" search will search for files that have been recently added to the network.
 SEARCH_CURRENT_SEARCH=Current Search:
 SEARCH_WHATS_NEW_SMALL=New
-SEARCH_SELECT_TYPE=Select Type:
+SEARCH_SELECT_TYPE=Select Search Type:
 SEARCH_MEDIA_DOCUMENTS_TOOLTIP=Search for Document Files, Including html, txt, pdf, and More
 SEARCH_MEDIA_PROGRAMS_TOOLTIP=Search for Program Files, Including exe, zip, gz, and More
 SEARCH_MEDIA_AUDIO_TOOLTIP=Search For Audio Files, Including mp3, wav, ogg, and More
@@ -422,7 +422,7 @@ SEARCH_WHATS_NEW_MEDIATYPE_ACTION_NAME=Search "What''s New" for: {0}
 SEARCH_XML_FIELD_ACTION_NAME=Search for {0}: {1}
 
 #Media Types
-MEDIA_ANY_TYPE=Any Type
+MEDIA_ANY_TYPE=All Types
 MEDIA_DOCUMENTS=Documents
 MEDIA_PROGRAMS=Programs
 MEDIA_AUDIO=Audio
@@ -540,7 +540,7 @@ DOWNLOADER_UTILS_HASH_CONFLICT_CONTINUE_LABEL=Continue
 # Key/value pairs for Statistics String...
 ################################################################################
 STATISTICS_AVAILABLE=available
-STATISTICS_FILES=files
+STATISTICS_FILES=Files
 STATISTICS_DISCONNECTED=Disconnected / no files available
 STATISTICS_SHARING=Sharing
 STATISTICS_SHARING_TOOLTIP=The number of files you are sharing.
@@ -661,15 +661,15 @@ UPLOAD_TABLE_STRING_HASH_TREE=Uploading Hash Tree
 UPLOAD_TABLE_STRING_FNF=File Not Found
 UPLOAD_TABLE_STRING_QUEUED=Queued at
 UPLOAD_STRING_KBPSEC=KB/s
-UPLOAD_ACTIVE=active
-UPLOAD_QUEUED=queued
+UPLOAD_ACTIVE=Active
+UPLOAD_QUEUED=Queued
 
 ###################################################################
 # Key/value pairs for MonitorView
 ###################################################################
-MONITOR_VIEW_INCOMING_SEARCHES=Show incoming searches
-MONITOR_VIEW_SHOW_LAST=Show last
-MONITOR_VIEW_SEARCHES=searches
+MONITOR_VIEW_INCOMING_SEARCHES=Show Incoming Searches
+MONITOR_VIEW_SHOW_LAST=Show Last
+MONITOR_VIEW_SEARCHES=Searches
 MONITOR_VIEW_LEAF_MESSAGE=Your client is a leaf node shielded by an Ultrapeer. Hence you will see few or no searches in the monitor window.
 
 ################################################################################
