--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1206,7 +1206,7 @@ OPTIONS_APPS_MAIN_TITLE=Helper Apps
 OPTIONS_BUGS_MAIN_TITLE=Bug Reports
 OPTIONS_GUI_MAIN_TITLE=View
 OPTIONS_POPUPS_MAIN_TITLE=Popups
-OPTIONS_AUTOCOMPLETE_MAIN_TITLE=Autocomplete Text
+OPTIONS_AUTOCOMPLETE_MAIN_TITLE=Text Autocompletion
 OPTIONS_THEME_MAIN_TITLE=Skin
 OPTIONS_SKIN_MAIN_TITLE=Skin
 OPTIONS_SEARCH_MAIN_TITLE=Searching
@@ -1352,7 +1352,7 @@ OPTIONS_UPLOAD_BANDWIDTH_SLIDER_LABEL_LABEL=Upload Speed:
 ################################################################################
 OPTIONS_UPLOAD_ALLOW_PARTIAL_SHARING_TITLE=Partial Files
 OPTIONS_UPLOAD_ALLOW_PARTIAL_SHARING_LABEL=You can choose whether or not to automatically share partially downloaded files.
-OPTIONS_UPLOAD_ALLOW_PARTIAL_SHARING_CHECK_BOX_LABEL=Allow Partial Sharing
+OPTIONS_UPLOAD_ALLOW_PARTIAL_SHARING_CHECK_BOX_LABEL=Allow Partial Sharing:
 
 ################################################################################
 # Key/Value pairs for the options for the hard maximum number of uploads
@@ -1389,7 +1389,7 @@ OPTIONS_SHUTDOWN_TITLE=Shutdown Options
 OPTIONS_SHUTDOWN_LABEL=You can choose the default shutdown behavior.
 OPTIONS_SHUTDOWN_IMMEDIATELY_LABEL=Shutdown Immediately
 OPTIONS_SHUTDOWN_AFTER_TRANSFERS_LABEL=Shutdown after Transfers
-OPTIONS_SHUTDOWN_TO_TRAY_LABEL=Minimize to SystemTray
+OPTIONS_SHUTDOWN_TO_TRAY_LABEL=Minimize to System Tray
 
 ################################################################################
 # Key/Value pairs for update options
@@ -1426,13 +1426,13 @@ OPTIONS_ITUNES_PREFERENCE_LABEL=You can have LimeWire import newly downloaded so
 ################################################################################
 OPTIONS_ITUNES_DAAP_PREFERENCE_TITLE=Sharing
 OPTIONS_ITUNES_DAAP_PREFERENCE_LABEL=You can share your Music on the Local Area Network and make it accessible for iTunes and other Digital Audio Access Protocol (DAAP) enabled Players.\n\nEnable Compatability Mode if you experience problems with iTunes Sharing. This mode uses more resources and is slower, but may fix problems.
-OPTIONS_ITUNES_DAAP_SUPPORT_DAAP_ENABLED_LABEL=Share my music:
-OPTIONS_ITUNES_DAAP_SUPPORT_SERVICE_NAME_LABEL=Shared name:
-OPTIONS_ITUNES_DAAP_SUPPORT_USE_BIO_LABEL=Compatibility mode:
+OPTIONS_ITUNES_DAAP_SUPPORT_DAAP_ENABLED_LABEL=Share My Music:
+OPTIONS_ITUNES_DAAP_SUPPORT_SERVICE_NAME_LABEL=Shared Name:
+OPTIONS_ITUNES_DAAP_SUPPORT_USE_BIO_LABEL=Compatibility Mode:
 
-OPTIONS_ITUNES_DAAP_PASSWORD_TITLE=Require password
+OPTIONS_ITUNES_DAAP_PASSWORD_TITLE=Password Protection
 OPTIONS_ITUNES_DAAP_PASSWORD_LABEL=You can limit the access to this service with a password.
-OPTIONS_ITUNES_DAAP_PASSWORD_CHECKBOX_LABEL=Require password:
+OPTIONS_ITUNES_DAAP_PASSWORD_CHECKBOX_LABEL=Require Password:
 OPTIONS_ITUNES_DAAP_PASSWORD_TEXTFIELD_LABEL=Password:
 
 ################################################################################
@@ -1465,15 +1465,15 @@ OPTIONS_DO_NOT_ASK_AGAIN=Do not display this message again
 OPTIONS_ALWAYS_USE_ANSWER=Always use this answer
 OPTIONS_POPUPS_TITLE=Popups
 OPTIONS_POPUPS_LABEL=Redisplay messages for which you have chosen 'Do not display this message again' or 'Always use this answer'.
-OPTIONS_POPUPS_DISPLAY_CHECK_BOX_LABEL=Revert To Default
+OPTIONS_POPUPS_DISPLAY_CHECK_BOX_LABEL=Revert to Default:
 
 ################################################################################
 # Key/value pairs for the options pane used to enable and disable autocomplete
 # search textfield
 ################################################################################
-OPTIONS_AUTOCOMPLETE_TITLE=Autocomplete
-OPTIONS_AUTOCOMPLETE_LABEL=You can enable or disable autocompletion of text fields
-OPTIONS_AUTOCOMPLETE_DISPLAY_CHECK_BOX_LABEL=Enable Autocompletion of Text Fields
+OPTIONS_AUTOCOMPLETE_TITLE=Text Autocompletion
+OPTIONS_AUTOCOMPLETE_LABEL=You can enable or disable autocompletion of text fields.
+OPTIONS_AUTOCOMPLETE_DISPLAY_CHECK_BOX_LABEL=Enable Autocompletion of Text Fields:
 
 ################################################################################
 # Key/Value pairs for theme options
@@ -1616,7 +1616,7 @@ OPTIONS_PORT_BOX_LABEL=Listen on Port:
 OPTIONS_ROUTER_TITLE=Router Configuration
 OPTIONS_ROUTER_LABEL=LimeWire can configure itself to work from behind a firewall or router. Using Universal Plug 'n Play (UPnP), LimeWire can automatically configure your router or firewall for optimal performance. If your router does not support UPnP, LimeWire can be set to advertise an external port manually. (You must also configure your router if you choose manual configuration.)
 OPTIONS_ROUTER_UPNP=Use UPnP (Recommended)
-OPTIONS_ROUTER_PORT=Manual Port Forward
+OPTIONS_ROUTER_PORT=Manual Port Forward:
 OPTIONS_ROUTER_NOTHING=Do Nothing (Not Recommended)
 
 ################################################################################
@@ -1655,13 +1655,13 @@ OPTIONS_PROXY_NO_PROXY_BUTTON_LABEL=No Proxy
 OPTIONS_PROXY_SOCKS4_BUTTON_LABEL=Socks v4
 OPTIONS_PROXY_SOCKS5_BUTTON_LABEL=Socks v5
 OPTIONS_PROXY_HTTP_BUTTON_LABEL=HTTP
-OPTIONS_PROXY_HOST_LABEL=Proxy
-OPTIONS_PROXY_PORT_LABEL=Port
+OPTIONS_PROXY_HOST_LABEL=Proxy:
+OPTIONS_PROXY_PORT_LABEL=Port:
 OPTIONS_PROXY_LOGIN_TITLE=Login Details
 OPTIONS_PROXY_LOGIN_LABEL=Configure username and password to be used for the proxy.
-OPTIONS_PROXY_LOGIN_AUTHENTICATE_LABEL=Enable Authentication. (Does not work for HTTP Proxies)
-OPTIONS_PROXY_LOGIN_USERNAME_LABEL=Username
-OPTIONS_PROXY_LOGIN_PASSWORD_LABEL=Password
+OPTIONS_PROXY_LOGIN_AUTHENTICATE_LABEL=Enable Authentication (Does Not Work for HTTP Proxies):
+OPTIONS_PROXY_LOGIN_USERNAME_LABEL=Username:
+OPTIONS_PROXY_LOGIN_PASSWORD_LABEL=Password:
 
 ################################################################################
 # Key/value pairs for top-level stats panels
