Comments and localization.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -525,6 +525,7 @@ DOWNLOADER_DIALOG_ERROR_LABEL=Error: {0}
 DOWNLOADER_DIALOG_WARNING_LABEL=Warning: {0} 
 # {0} the full path name of the file in question
 DOWNLOADER_DIALOG_NOTE_LABEL=<b>Note</b>: A file with the same content already exists in the library at {0}
+NO_FILENAME_LABEL=No Filename
 
 ################################################################################
 # Key/value pairs for DownloaderUtils
