Provided clearer error message when downloading a file that is already being downloaded.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1129,8 +1129,8 @@ ERROR_FORCE_IP_PORT_RANGE=You must enter a port between 1 and 65535 when manuall
 ERROR_CONNECT_STRING=Connect strings must be at least length 1, contain one space, and may not contain 'GIV', 'GET', or any other HTTP keywords.
 ERROR_PORT_RANGE=Please enter a port between 1 and 65535.
 ERROR_INVALID_GROUP=You need to select a valid group.
-ERROR_ALREADY_DOWNLOADING=You are already downloading
-FORMATTED_ERROR_ALREADY_DOWNLOADING=You are already downloading "{0}".
+ERROR_ALREADY_DOWNLOADING=You are already downloading this file to
+FORMATTED_ERROR_ALREADY_DOWNLOADING=You are already downloading this file to "{0}".
 ERROR_ALREADY_EXISTS=You have already downloaded
 NO_PREVIEW_BEGIN=There is nothing to preview for file
 NO_PREVIEW_END=.
