Play List -> Playlist

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -480,7 +480,7 @@ LIBRARY_REFRESH_BUTTON_TIP=Reload Shared Folders
 LIBRARY_EXPLORE_BUTTON_LABEL=Explore
 LIBRARY_EXPLORE_BUTTON_TIP=Open Library Folder
 LIBRARY_PLAYLIST_BUTTON_LABEL=Enqueue
-LIBRARY_PLAYLIST_BUTTON_TIP=Add Selected Files to the Play List
+LIBRARY_PLAYLIST_BUTTON_TIP=Add Selected Files to the Playlist
 LIBRARY_ANNOTATE_BUTTON_LABEL=Describe...
 LIBRARY_ANNOTATE_BUTTON_TIP=Add Description to Selected File
 LIBRARY_RESUME_BUTTON_LABEL=Resume
@@ -490,12 +490,12 @@ LIBRARY_SHARED_FILES_CONFIGURE_EXPLAIN=You can configure the folders you share i
 LIBRARY_SHARED_FILES_CONFIGURE=Configure...
 
 PLAYLIST_LOAD_BUTTON_LABEL=Open...
-PLAYLIST_LOAD_BUTTON_TIP=Open an Existing Play List
+PLAYLIST_LOAD_BUTTON_TIP=Open an Existing Playlist
 PLAYLIST_SAVE_BUTTON_LABEL=Save As...
-PLAYLIST_SAVE_BUTTON_TIP=Save the Current Play List to a File
+PLAYLIST_SAVE_BUTTON_TIP=Save the Current Playlist to a File
 PLAYLIST_DELETE_BUTTON_LABEL=Remove
-PLAYLIST_DELETE_BUTTON_TIP=Remove Selected File from Play List
-PLAYLIST_FILE_DESCRIPTION=Play List Files (*.m3u)
+PLAYLIST_DELETE_BUTTON_TIP=Remove Selected File from Playlist
+PLAYLIST_FILE_DESCRIPTION=Playlist Files (*.m3u)
 
 ################################################################################
 # Key/value pairs for the integrated media player...
@@ -751,7 +751,7 @@ LIBRARY_TREE_NEW_FOLDER_LABEL=New Folder
 LIBRARY_TREE_SHARE_FOLDER_LABEL=Share Folder
 LIBRARY_TREE_UNSHARE_FOLDER_LABEL=Stop Sharing Folder
 LIBRARY_TREE_RENAME_FOLDER_LABEL=Rename
-LIBRARY_TREE_TO_PLAYLIST_FOLDER_LABEL=Add Folder Contents to Play List
+LIBRARY_TREE_TO_PLAYLIST_FOLDER_LABEL=Add Folder Contents to Playlist
 LIBRARY_TREE_SAVED_DIRECTORY=Saved Files
 LIBRARY_TREE_INCOMPLETE_DIRECTORY=Incomplete Files
 LIBRARY_TREE_SHARED_FILES_DIRECTORY=Shared Files
@@ -766,15 +766,15 @@ LIBRARY_BURN_LABEL=Burn CD...
 ###################################################################
 # Key/value pairs for PlayListGUI
 ###################################################################
-PLAYLIST_TITLE=MP3 Play List
+PLAYLIST_TITLE=MP3 Playlist
 PLAYLIST_TABLE_NAME=Name
 PLAYLIST_TABLE_LENGTH=Length
 PLAYLIST_TABLE_BITRATE=Bitrate
 PLAYLIST_OPTIONS_STRING=Play Options:
 PLAYLIST_OPTIONS_CONTINUE=Continuous
 PLAYLIST_OPTIONS_SHUFFLE=Shuffle
-PLAYLIST_DIALOG_OPEN_TITLE=Open Play List (.m3u)
-PLAYLIST_DIALOG_SAVE_TITLE=Save Play List As
+PLAYLIST_DIALOG_OPEN_TITLE=Open Playlist (.m3u)
+PLAYLIST_DIALOG_SAVE_TITLE=Save Playlist As
 PLAYLIST_DIALOG_SAVE_SAVE=Save
 PLAYLIST_CANNOT_PLAY_FILE=LimeWire cannot play the file
 PLAYLIST_FILE_UNSUPPORTED=. The file type is not recognized.
@@ -969,7 +969,7 @@ SPLASH_STATUS_MONITOR_WINDOW=Loading monitor window...
 SPLASH_STATUS_CONNECTION_WINDOW=Loading connection window...
 SPLASH_STATUS_STATISTICS_WINDOW=Loading statistics window...
 SPLASH_STATUS_STATUS_WINDOW=Loading status window...
-SPLASH_STATUS_PLAYLIST_WINDOW=Loading play list window...
+SPLASH_STATUS_PLAYLIST_WINDOW=Loading playlist window...
 SPLASH_STATUS_MENUS=Loading menus...
 SPLASH_STATUS_MESSAGE_SERVICE=Loading messages...
 SPLASH_STATUS_ICONS=Loading icons...
