Import the missing comments

--- a/lib/messagebundles/MessagesBundle_en.properties
+++ b/lib/messagebundles/MessagesBundle_en.properties
@@ -15,6 +15,8 @@ LOCALE_ENGLISH_LANGUAGE_NAME=English (US)
 # Before adding a value below, verify the existence of the translation on the NSIS repository:
 # http://cvs.sourceforge.net/viewcvs.py/nsis/NSIS/Contrib/Language%20files/
 LOCALE_NSIS_NAME=English
+# See also other translatable items for the LimeWire installer:
+# http://www.limewire.org/fisheye/viewrep/limecvs/lib/installbundles/
 
 ################################################################################
 # Key/value pair for whether or not bold characters should be used for this
@@ -33,6 +35,12 @@ LAYOUT_RIGHT_TO_LEFT=false
 # The default is false (set to true in english resource).
 ################################################################################
 HAS_TIPS_OF_THE_DAY=true
+
+# See also other translatable resources for the application:
+# * translations of meta-data search items:
+#   http://www.limewire.org/fisheye/viewrep/limecvs/lib/messagebundles/xml/display/
+# * translations of "about.html"
+#   http://www.limewire.org/fisheye/viewrep/limecvs/lib/messagebundles/resources/
 
 ################################################################################
 # All other translated resources are missing. Look at the default English file.
