fixed FileChooserHandler.getSave.. to use OSX's native FileDialog (which looks much better), fixed hard-coded 'Same File Already In Library' message, fixed to not prompt to overwrite on OSX since the new FileDialog already does that now.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -570,6 +570,7 @@ DOWNLOADER_UTILS_FILECHOOSER_TITLE=Save Download As
 DOWNLOADER_UTILS_HASH_CONFLICT_MESSAGE=You already have the exact same file at {0}
 DOWNLOADER_UTILS_HASH_CONFLICT_QUESTION=Do you want to continue downloading anyway?
 DOWNLOADER_UTILS_HASH_CONFLICT_CONTINUE_LABEL=Continue
+DOWNLOADER_UTILS_ALREADY_IN_LIBRARY=Same File Already In Library
 
 ################################################################################
 # Key/value pair for sharing of files specially/individually
